Compare the accuracy of different algorithms

--- a/dataanalysis.ipynb
+++ b/dataanalysis.ipynb
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "00d9abc4",
+   "id": "d716ce27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3131f204",
+   "id": "8b276cdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ac852ed3",
+   "id": "44617791",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
     "print('The accuracy score of Decision Tree is', decision_tree_score, '.')\n",
     "print('The accuracy score of Support Vector Machine is', svr_score, '.')\n",
     "print('The accuracy score of Lasso Regression is', lasso_reg_score, '.')\n",
-    "print('The accuracy score of Support Vector Machine is', random_forest_score, '.')"
+    "print('The accuracy score of Random Forest is', random_forest_score, '.')"
    ]
   },
   {
